static/styles.css
* {
	box-sizing: border-box;
}

@font-face {
	font-family: "Roboto";
	src: url('/static/fonts/Roboto-Regular.ttf') format('truetype');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: "Roboto";
	src: url('/static/fonts/Roboto-Italic.ttf') format('truetype');
	font-weight: 400;
	font-style: italic;
}

@font-face {
	font-family: "Roboto";
	src: url('/static/fonts/Roboto-Bold.ttf') format('truetype');
	font-weight: 700;
	font-style: normal;
}

@font-face {
	font-family: "Roboto";
	src: url('/static/fonts/Roboto-BoldItalic.ttf') format('truetype');
	font-weight: 700;
	font-style: italic;
}

@font-face {
	font-family: "Roboto";
	src: url('/static/fonts/Roboto-Light.ttf') format('truetype');
	font-weight: 300;
	font-style: normal;
}

@font-face {
	font-family: "Roboto";
	src: url('/static/fonts/Roboto-LightItalic.ttf') format('truetype');
	font-weight: 300;
	font-style: italic;
}

html {
	font-family: "Roboto", "Arial", sans-serif;
}

img {
	max-width: 75%;
	margin: auto;
	display: block;
}

a {
	text-decoration: none;
	color: #e48af5;
}

a:hover {
	filter: brightness(1.3);
}

body {
	margin: 0;
	padding: 0;
	height: 100vh;
	max-height: 100vh;
	display: flex;
	flex-direction: column;
	background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("/static/img/wallpaper.webp");
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-size: cover;
}

.button {
	color: #e48af5;
}

body.dark {
	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/img/wallpaper.webp");
}

body.dark .main-div {
	background-color: rgba(30, 30, 30, 0.9);
	color:white;
}

body.dark .darkmode-button {
	background-color: #ffffff;
	color: black;
}

body.dark .darkmode-button:hover {
	background-color: #cfcfcf;
}

.darkmode-button {
	border: none;
	color: white;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 18px;
	cursor: pointer;
	background-color: #371d49;
	border-radius: 8px;
}

.darkmode-button:hover {
	background-color: #000000
}

.DotAnim {
	animation-name: DotAnim;
	animation-duration: 1.8s;
	animation-iteration-count: infinite;
	animation-timing-function: linear;
}

.footer {
	flex: 0 0 40px;
	width: 100%;
	background-color: #191919;
	color: #fff;
	font-size: 1em;
	z-index: 10;
	display: flex;
	justify-content: right;
	align-items: center;
	padding: 0 30px;
	box-sizing: border-box;
}

.footnote {
	margin-top: auto;
	text-align: right;
	width: 100%;
}

h1 {
	font-weight: bold;
	font-size: 2.4em;
	line-height: 1.2em;
	margin: 0;
	padding: 20px 0;
	text-align: left;
	width: 100%;
}

h2 {
	font-weight: lighter;
	font-size: 1.6em;
	line-height: 1.2em;
	margin: 0;
	padding: 20px 0;
	text-align: left;
	width: 100%;
}

.header-container {
	flex: 0 0 64px;
	width: 100%;
	color: #050316;
	background-color: #8327ce;
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 99;
}

.header {
	color: white;
	font-size: 20px;
	height:100%;
	width: 100%;
	max-height: 64px;
	max-width: 50%;
	justify-content: space-between;
	display: flex;
	align-items: center;
	padding: 0 40px;
}

.header a {
	color: white;
}

.header a:hover {
	font-weight: bold;
}

iframe {
	width: 60%;
	aspect-ratio: 16 / 9;
}

@keyframes DotAnim {
	0% {color: #000000;}
	100% {color: #ffffff;}
}

.logo-socials {
	width: 20px;
	height: 20px;
	display: inline-block;
    vertical-align: middle;
}

.main-div {
	display: flex;
	flex-direction: column;
	align-items: flex-start;

	flex: 1 1 auto;
	max-width: 50%;
	height: 100%;
	width: 100%;
	margin: auto;
	padding: 40px;
	background-color: rgba(251, 251, 251, 0.9);
	color: #050316;
	overflow-y: auto;
	overflow-x: hidden;

}

@media screen and (max-aspect-ratio: 1/1) {
	.back-button {
		margin: 0;
	}
	.header {
		font-size: 18px;
		padding: 0 5vw;
		max-width: 100%;
	}
	iframe {
		width:80%;
	}
	.main-div {
		max-width: 100vw;
		padding: 90px 5% 40px;
	}
	.okayu-footer {
		display: none;
	}
}

nav {
	display: flex;
	align-items: center;
	flex-grow: 1;
	width: 100%;
	max-width: 360px;
	margin-left: 40px;
	justify-content: space-between;
}

nav > * {
	padding: 6px;
}

.home {
	display: flex;
	width: 100%;
	max-width: 20vw;
}

.okayu-footer {
	position: fixed;
	bottom: 0px;
	width: 24vw;
	height: auto;
  	filter: drop-shadow(6px 6px 6px rgba(0,0,0,0.2));
}

p {
	font-size: 1.1em;
}

.socials {
	max-width: auto;
	color: #ffffff;
	text-decoration: none;
	vertical-align: middle;
	font-style: normal;
}

.footer-left {
	flex: 1 0 0%;
}

.footer-center {
	flex: 0 0 auto;
	text-align: center;
	white-space: nowrap;
}

.footer-right {
	flex: 1 0 0%;
	display: flex;
	justify-content: flex-end;
	align-items: center;
	gap: 20px;
}

.footer-right a:hover {
	filter: none;
}

#twitch-link:hover {
	color: rgb(168, 113, 248);
}

#twitter-link:hover {
	color: rgb(66, 180, 255)
}

#youtube-link:hover {
	color: rgb(255, 0, 0);
}

ul {
	font-size:1.2em;
}

